Meets MVP for careers assignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ input, select, textarea {
 
 	body {
 		background-color: #ffffff;
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	body, input, select, textarea {
@@ -316,23 +316,23 @@ input, select, textarea {
 	}
 
 	input, select, textarea {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	a {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 		a:hover {
-			color: #47D3E5;
+			color: #5DACC7;
 		}
 
 	strong, b {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	blockquote {
@@ -2188,7 +2188,7 @@ input, select, textarea {
 	.button {
 		background-color: transparent;
 		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
-		color: #000000 !important;
+		color: #3F4B54 !important;
 	}
 
 		input[type="submit"]:hover,
@@ -2196,8 +2196,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px #5DACC7;
+			color: #5DACC7 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2206,8 +2206,8 @@ input, select, textarea {
 		button:active,
 		.button:active {
 			background-color: rgba(71, 211, 229, 0.2);
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px #5DACC7;
+			color: #5DACC7 !important;
 		}
 
 		input[type="submit"].primary,
@@ -2215,7 +2215,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #000000;
+			background-color: #3F4B54;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2225,7 +2225,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #47D3E5;
+				background-color: #5DACC7;
 			}
 
 			input[type="submit"].primary:active,
@@ -2469,7 +2469,7 @@ input, select, textarea {
 	}
 
 	label {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	input[type="text"],
@@ -2491,8 +2491,8 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #47D3E5;
-			box-shadow: 0 0 0 1px #47D3E5;
+			border-color: #5DACC7;
+			box-shadow: 0 0 0 1px #5DACC7;
 		}
 
 	select {
@@ -2500,13 +2500,13 @@ input, select, textarea {
 	}
 
 		select option {
-			color: #000000;
+			color: #3F4B54;
 			background: #ffffff;
 		}
 
 	input[type="checkbox"] + label,
 	input[type="radio"] + label {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 		input[type="checkbox"] + label:before,
@@ -2516,15 +2516,15 @@ input, select, textarea {
 
 	input[type="checkbox"]:checked + label:before,
 	input[type="radio"]:checked + label:before {
-		background-color: #000000;
-		border-color: #000000;
+		background-color: #3F4B54;
+		border-color: #3F4B54;
 		color: #ffffff;
 	}
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #47D3E5;
-		box-shadow: 0 0 0 1px #47D3E5;
+		border-color: #5DACC7;
+		box-shadow: 0 0 0 1px #5DACC7;
 	}
 
 	::-webkit-input-placeholder {
@@ -2594,14 +2594,14 @@ input, select, textarea {
 	}
 
 	a.icon.style2:hover:before {
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px #5DACC7;
+		color: #5DACC7;
 	}
 
 	a.icon.style2:active:before {
 		background-color: rgba(71, 211, 229, 0.1);
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px #5DACC7;
+		color: #5DACC7;
 	}
 
 /* Image */
@@ -2988,7 +2988,7 @@ input, select, textarea {
 		}
 
 	table th {
-		color: #000000;
+		color: #3F4B54;
 	}
 
 	table thead {
@@ -6329,7 +6329,7 @@ input, select, textarea {
 /* Gallery (style1) */
 
 	.gallery.style1 {
-		background-color: #000000;
+		background-color: #3F4B54;
 		color: #ffffff;
 		-moz-align-items: center;
 		-webkit-align-items: center;
@@ -6361,7 +6361,7 @@ input, select, textarea {
 		}
 
 			.gallery.style1 a:hover {
-				color: #47D3E5;
+				color: #5DACC7;
 			}
 
 		.gallery.style1 strong, .gallery.style1 b {
@@ -6400,8 +6400,8 @@ input, select, textarea {
 			.gallery.style1 input[type="button"]:hover,
 			.gallery.style1 button:hover,
 			.gallery.style1 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7 !important;
 			}
 
 			.gallery.style1 input[type="submit"]:active,
@@ -6410,8 +6410,8 @@ input, select, textarea {
 			.gallery.style1 button:active,
 			.gallery.style1 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7 !important;
 			}
 
 			.gallery.style1 input[type="submit"].primary,
@@ -6421,7 +6421,7 @@ input, select, textarea {
 			.gallery.style1 .button.primary {
 				background-color: #ffffff;
 				box-shadow: none;
-				color: #000000 !important;
+				color: #3F4B54 !important;
 			}
 
 				.gallery.style1 input[type="submit"].primary:hover,
@@ -6429,7 +6429,7 @@ input, select, textarea {
 				.gallery.style1 input[type="button"].primary:hover,
 				.gallery.style1 button.primary:hover,
 				.gallery.style1 .button.primary:hover {
-					background-color: #47D3E5;
+					background-color: #5DACC7;
 				}
 
 				.gallery.style1 input[type="submit"].primary:active,
@@ -6665,7 +6665,7 @@ input, select, textarea {
 /* Gallery (style2) */
 
 	.gallery.style2 {
-		background-color: #000000;
+		background-color: #3F4B54;
 		color: #ffffff;
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -6685,7 +6685,7 @@ input, select, textarea {
 		}
 
 			.gallery.style2 a:hover {
-				color: #47D3E5;
+				color: #5DACC7;
 			}
 
 		.gallery.style2 strong, .gallery.style2 b {
@@ -6724,8 +6724,8 @@ input, select, textarea {
 			.gallery.style2 input[type="button"]:hover,
 			.gallery.style2 button:hover,
 			.gallery.style2 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7 !important;
 			}
 
 			.gallery.style2 input[type="submit"]:active,
@@ -6734,8 +6734,8 @@ input, select, textarea {
 			.gallery.style2 button:active,
 			.gallery.style2 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7 !important;
 			}
 
 			.gallery.style2 input[type="submit"].primary,
@@ -6745,7 +6745,7 @@ input, select, textarea {
 			.gallery.style2 .button.primary {
 				background-color: #ffffff;
 				box-shadow: none;
-				color: #000000 !important;
+				color: #3F4B54 !important;
 			}
 
 				.gallery.style2 input[type="submit"].primary:hover,
@@ -6753,7 +6753,7 @@ input, select, textarea {
 				.gallery.style2 input[type="button"].primary:hover,
 				.gallery.style2 button.primary:hover,
 				.gallery.style2 .button.primary:hover {
-					background-color: #47D3E5;
+					background-color: #5DACC7;
 				}
 
 				.gallery.style2 input[type="submit"].primary:active,
@@ -7313,7 +7313,7 @@ input, select, textarea {
 	}
 
 	#wrapper > .wrapper.style2.invert > .inner {
-		background-color: #000000;
+		background-color: #3F4B54;
 	}
 
 /* Items (transitions) */
@@ -8231,7 +8231,7 @@ input, select, textarea {
 	}
 
 		#wrapper > .invert {
-			background-color: #000000;
+			background-color: #3F4B54;
 			color: #ffffff;
 		}
 
@@ -8244,7 +8244,7 @@ input, select, textarea {
 			}
 
 				#wrapper > .invert a:hover {
-					color: #47D3E5;
+					color: #5DACC7;
 				}
 
 			#wrapper > .invert strong, #wrapper > .invert b {
@@ -8287,8 +8287,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="button"]:hover,
 				#wrapper > .invert button:hover,
 				#wrapper > .invert .button:hover {
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #5DACC7;
+					color: #5DACC7 !important;
 				}
 
 				#wrapper > .invert input[type="submit"]:active,
@@ -8297,8 +8297,8 @@ input, select, textarea {
 				#wrapper > .invert button:active,
 				#wrapper > .invert .button:active {
 					background-color: rgba(71, 211, 229, 0.2);
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px #5DACC7;
+					color: #5DACC7 !important;
 				}
 
 				#wrapper > .invert input[type="submit"].primary,
@@ -8308,7 +8308,7 @@ input, select, textarea {
 				#wrapper > .invert .button.primary {
 					background-color: #ffffff;
 					box-shadow: none;
-					color: #000000 !important;
+					color: #3F4B54 !important;
 				}
 
 					#wrapper > .invert input[type="submit"].primary:hover,
@@ -8316,7 +8316,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:hover,
 					#wrapper > .invert button.primary:hover,
 					#wrapper > .invert .button.primary:hover {
-						background-color: #47D3E5;
+						background-color: #5DACC7;
 					}
 
 					#wrapper > .invert input[type="submit"].primary:active,
@@ -8350,8 +8350,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="url"]:focus,
 				#wrapper > .invert select:focus,
 				#wrapper > .invert textarea:focus {
-					border-color: #47D3E5;
-					box-shadow: 0 0 0 1px #47D3E5;
+					border-color: #5DACC7;
+					box-shadow: 0 0 0 1px #5DACC7;
 				}
 
 			#wrapper > .invert select {
@@ -8359,7 +8359,7 @@ input, select, textarea {
 			}
 
 				#wrapper > .invert select option {
-					color: #000000;
+					color: #3F4B54;
 					background: #ffffff;
 				}
 
@@ -8377,13 +8377,13 @@ input, select, textarea {
 			#wrapper > .invert input[type="radio"]:checked + label:before {
 				background-color: #ffffff;
 				border-color: #ffffff;
-				color: #000000;
+				color: #3F4B54;
 			}
 
 			#wrapper > .invert input[type="checkbox"]:focus + label:before,
 			#wrapper > .invert input[type="radio"]:focus + label:before {
-				border-color: #47D3E5;
-				box-shadow: 0 0 0 1px #47D3E5;
+				border-color: #5DACC7;
+				box-shadow: 0 0 0 1px #5DACC7;
 			}
 
 			#wrapper > .invert ::-webkit-input-placeholder {
@@ -8407,14 +8407,14 @@ input, select, textarea {
 			}
 
 			#wrapper > .invert a.icon.style2:hover:before {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7;
 			}
 
 			#wrapper > .invert a.icon.style2:active:before {
 				background-color: rgba(71, 211, 229, 0.1);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px #5DACC7;
+				color: #5DACC7;
 			}
 
 			#wrapper > .invert ul.alt li {
